--- a/src/components/profile-information/ProfileInformation.scss
+++ b/src/components/profile-information/ProfileInformation.scss
@@ -6,7 +6,9 @@
   align-items: center;
   padding: 25px 15px;
   position: relative;
-  
+  .photo-container {
+    display: none; //DELELTE THIS HEHE
+  }
   .information {
     width: 100%;
     padding: 5px;
@@ -16,6 +18,7 @@
       font-weight: bold;
     }
     .birthdate {
+      display: none; //DELELTE THIS HEHE
       margin: 8px 0;
     }
     &:hover {
