--- a/src/components/profile-information/ProfileInformation.scss
+++ b/src/components/profile-information/ProfileInformation.scss
@@ -1,3 +1,6 @@
+.information-container {
+  position: relative;
+}
 .profile-card {
   font-size: 12px;
   display: flex;
@@ -70,6 +73,12 @@
       text-align: center;
       font-size: 9px;
       margin-left: 8px;
+    }
+    .error {
+      grid-column: 2/3;
+      text-align: center;
+      color: red;
+      font-size: 8px;
     }
   }
   .save-button {
