--- a/src/components/profile-card/ProfileCard.scss
+++ b/src/components/profile-card/ProfileCard.scss
@@ -2,11 +2,10 @@
   font-size: 14px;
   position: relative;
   height: 100%;
+  background-color: white;
+  z-index: 1000;
   .buttons {
     height: inherit;
-  }
-  &:hover .information-container {
-    border: 2px solid #ff6fb5;
   }
   .information-container {
     padding: 0 10px;
