--- a/src/components/profile-information/ProfileInformation.scss
+++ b/src/components/profile-information/ProfileInformation.scss
@@ -48,6 +48,7 @@
     }
   }
   .information {
+    background-color: white;
     width: 100%;
     padding: 5px;
     margin: 0 10px;
@@ -88,13 +89,12 @@
         outline: none;
       }
     }
-    select{
+    select {
       background-color: white;
       border-radius: 2px;
-      border:1px solid gray;
-
+      border: 1px solid gray;
     }
-    input[type="checkbox"]{
+    input[type="checkbox"] {
       border: 1px solid gray;
     }
     .error {
