--- a/src/components/photo-selector/PhotoSelector.scss
+++ b/src/components/photo-selector/PhotoSelector.scss
@@ -2,12 +2,15 @@
   margin-bottom: 15px;
   .picture {
     border-radius: 50%;
-    border: 3px solid #000;
     height: 50px;
     overflow: hidden;
     cursor: pointer;
+
+    &.no-pic {
+      border: 3px solid #000;
+    }
     &:hover {
-      border: 2px solid #ff6fb5;
+      border: 3px solid #ff6fb5;
     }
   }
   input[type="file"] {
